--- a/PMGwebsite/public/css/style.css
+++ b/PMGwebsite/public/css/style.css
@@ -174,6 +174,20 @@ button {
     overflow: hidden;
 }
 
+#regButton[disabled] {
+  border:solid 1px #dddddd; 
+  color:#696969; 
+  text-align:center; 
+  background-color:#ededed;
+  background-image:none;
+  text-decoration:none;
+  width:130px;
+  opacity: 0.6;
+  cursor: not-allowed;
+  transition-duration: 0s;
+  transition: all 0s;
+  box-shadow: none;
+}
 .button {
     background-color: #3ab795;
     font-size: 16px;
@@ -263,6 +277,16 @@ button:hover {
     color: white;
     font-size: 23px;
     width: 200px;
+}
+
+#regBelow {
+    background-color: #3ab795;
+    font-size: 12px;
+    text-align: right
+    display: inline-block;
+    border: none;
+    color: white;
+    width: 100px;
 }
 span.psw {
     float: right;
