added sticky navigation bar and made it look more like our previous site

--- a/PMGreact/app/style.css
+++ b/PMGreact/app/style.css
@@ -1,44 +1,80 @@
 body {
-  background-color: #FFCC00;
-  padding: 20px;
   margin: 0;
-  text-align: center
-}
-h1, h2, p, ul, li {
-  font-family: Helvetica, Arial, sans-serif;
+  padding: 0;
+  min-height: 100%;
+  font-size: 18px;
+  font-family: 'Lato', helvetica, sans-serif;
+/*  background: linear-gradient(#ffb718, #e97200);*/
+  text-align: center;
 }
 
-h1{
-    text-align: center
+
+#page-title {
+    font-size: 90px;
+    text-align: center;
+    text-transform: uppercase;
+    width: 100%;
+    position: absolute;
+    color: aliceblue;
+    text-shadow: 5px 5px #3ab795;
 }
+
+p {
+  font-size: 20px;
+  margin: 40px auto;
+  max-width: 600px;
+  line-height: 1.6;
+  margin-bottom: 1.7em;
+}
+
 ul.header li {
   display: inline;
   list-style-type: none;
+  text-align: center;
   margin: 0;
 
 }
+
 ul.header {
   background-color: #111;
   padding: 0;
-  width: 100%
+    position: relative;
+    bottom: 20px;
 }
+
 ul.header li a {
   color: #FFF;
   font-weight: bold;
   text-decoration: none;
-  padding: 20px;
+  padding: 25px;
   display: inline-block;
 }
+
+
+/*
+ul.header {
+  background-color: #111;
+  width: auto;
+}
+*/
+
+
+
+
 .content {
   background-color: #FFF;
-  padding: 20px;
+  padding: 0px;
 }
-.content h2 {
-  padding: 0;
-  margin: 0;
+
+.footer {
+  margin: 50px auto;
+  max-width: 600px;
+  border-top: 1px solid #444;
+  padding: 20px 0;
 }
-.content li {
-  margin-bottom: 10px;
+.footer p {
+  color: #444;
+  font-size: 12px;
 }
 
 .active {
