--- a/PMGreact/app/style.css
+++ b/PMGreact/app/style.css
@@ -15,8 +15,10 @@ body {
     text-transform: uppercase;
     width: 100%;
     position: absolute;
+    top: 150px;
     color: aliceblue;
     text-shadow: 5px 5px #3ab795;
+    
 }
 
 p {
@@ -30,37 +32,164 @@ p {
 ul.header li {
   display: inline;
   list-style-type: none;
-  text-align: center;
-  margin: 0;
+/*  text-align: center;*/
+  margin: auto;
+    
+
+}
+
+#login{
+    float: right;
+
+}
+
+#register{
+    float: right;
 
 }
 
 ul.header {
   background-color: #111;
   padding: 0;
-    position: relative;
-    bottom: 20px;
+  position: relative;
+  bottom: 20px;
+    
+    
 }
 
 ul.header li a {
   color: #FFF;
   font-weight: bold;
   text-decoration: none;
+
   padding: 25px;
   display: inline-block;
 }
-
-
-/*
-ul.header {
-  background-color: #111;
-  width: auto;
+ul.header li a:hover{
+  background-color: #3ab795;
+  text-decoration: underline;
+  color:chartreuse;
+  opacity: 0.5;
 }
-*/
+/* Set a style for all buttons */
+button {
+    position: relative;
+    font-family: 'Lato', helvetica, sans-serif;
+    text-align: center;
+    background-color: #3ab795;
+    color: white;
+    padding: 15px;
+    margin: 20px;
+    width: 50%;
+    transition: all 0.5s;
+    cursor: pointer;
+    margin: 5px;
+    transition-duration: 0.4s;
+    text-decoration: none;
+    overflow: hidden;
+}
 
 
+button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
 
+button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
 
+button:hover {
+    background-color: #3ab770;
+    box-shadow: 0 20px 30px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+}
+button:hover span {
+  padding-right: 25px;
+}
+
+button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+button:after {
+    content: "";
+    background: #f1f1f1;
+    display: block;
+    position: absolute;
+    padding-top: 300%;
+    padding-left: 350%;
+    margin-left: -20px !important;
+    margin-top: -120%;
+    opacity: 0;
+    transition: all 0.8s
+}
+
+/* Bordered form */
+form {
+    border: 3px solid #f1f1f1;
+}
+
+/* Full-width inputs */
+input[type=text], input[type=password] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    box-sizing: border-box;
+}
+
+/* Set a style for all buttons */
+button {
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    cursor: pointer;
+    width: 100%;
+}
+
+/* Extra style for the cancel button (red) */
+.cancelbtn {
+    width: auto;
+    padding: 10px 18px;
+    background-color: #f44336;
+}
+
+#back{
+   background-color:#f1f1f1; 
+}
+
+/* Add padding to containers */
+.container {
+    padding: 16px;
+}
+
+/* The "Forgot password" text */
+span.psw {
+    float: right;
+    padding-top: 16px;
+}
+
+/* Change styles for span and cancel button on extra small screens */
+@media screen and (max-width: 300px) {
+    span.psw {
+        display: block;
+        float: none;
+    }
+    .cancelbtn {
+        width: 100%;
+    }
+}
 .content {
   background-color: #FFF;
   padding: 0px;
